# AI_Core

./: Cargo.toml
src/: err.rs  example_01.rs  layer.rs  lib.rs  main.rs  network.rs  util.rs
src/examples/: example_01.rs  example_012.rs  example_013.rs  example_02.rs  example_03.rs
