[package]
name = "ai_core"
version = "0.2.0"
authors = ["jwtooke <j.w.tooke@gmail.com>"]
edition = "2018"

[dependencies]
rand = "0.7.0"
ndarray = "0.13.0"
ndarray-rand = "0.11.0"
#ndarray-linalg = { version = "0.11", features = ["intel-mkl"] }
num-traits = "0.2.9"

[[bin]]
name = "example_012"
path = "src/examples/example_012.rs"

[[bin]]
name = "example_013"
path = "src/examples/example_013.rs"

[[bin]]
name = "example_02"
path = "src/examples/example_02.rs"